# boxer_ros2

./: README.md
boxer_bringup/: CMakeLists.txt  package.xml
boxer_bringup/launch/: bringup_launch.py
boxer_bringup/src/: boxer_bridge.cpp
boxer_control/: CMakeLists.txt  package.xml
boxer_control/config/: control.yaml  teleop.yaml
boxer_control/launch/: control_launch.py  teleop_launch.py
boxer_description/: CMakeLists.txt  package.xml
boxer_description/launch/: description_launch.py
boxer_description/urdf/: boxer.urdf.xacro
boxer_msgs/: CMakeLists.txt  package.xml
boxer_msgs/msg/: MotorFeedback.msg  Status.msg  TractionStatus.msg
boxer_navigation2/: CMakeLists.txt  package.xml
boxer_navigation2/config/: slam.yaml
boxer_navigation2/launch/: localization_launch.py  nav2_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py
boxer_navigation2/maps/: office.pgm  office.yaml  office2.pgm  office2.yaml  office3.pgm  office3.yaml
boxer_navigation2/params/: nav2_params.yaml
boxer_navigation2/rviz/: nav2_view.rviz
