<?xml version="1.0"?>
<package format="3">
  <name>boxer_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for BOXER</description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>realtime_tools</depend>
  <depend>topic_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>