<?xml version="1.0"?>
<package format="3">
  <name>boxer_description</name>
  <version>0.1.2</version>
  <description>
    Contains the URDF description of BOXER for visualization
    and simulation purposes.
  </description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>
  <author email="shlee@roas.co.kr">Brighten Lee</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>realsense2_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
