<?xml version="1.0"?>
<package format="3">
  <name>boxer_msgs</name>
  <version>0.1.2</version>
  <description>Low-level platform messages for BOXER.</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>
  <author email="mpurvis@clearpath.ai">Mike Purvis</author>
  <author email="shlee@roas.co.kr">Brighten Lee</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
