<?xml version="1.0"?>
<package format="3">
  <name>boxer_navigation2</name>
  <version>0.0.0</version>
  <description>Navigation2 for BOXER</description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>